B端影院列表展示逻辑修复